--- a/12-DOM-events/index.html
+++ b/12-DOM-events/index.html
@@ -15,7 +15,9 @@
     <button onclick="document.body.style.backgroundColor='yellow'">Yellow</button>
     <button onclick="makeGreen()">Green</button>
     <button id="makeRed">Red</button>
+    <button id="makePurple">Purple</button>
     <button id="makePink">Pink</button>
+    <button id="makeBlue">Blue</button>
 
     <script src="./js/event.js"></script>
 </body>
