change text by input value

--- a/12-DOM-events/index.html
+++ b/12-DOM-events/index.html
@@ -19,6 +19,13 @@
     <button id="makePink">Pink</button>
     <button id="makeBlue">Blue</button>
 
+
+    <h1 id="text">Something, <span>click to change</span></h1>
+
+    <h1 id="default-text">Document Object Model</h1>
+    <input id="input-value" type="text">
+    <button id="add">Add</button>
+
     <script src="./js/event.js"></script>
 </body>
 
